# indexmap-cli

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: architect.agent.md  implementer.agent.md  orchestrator.agent.md  release.agent.md  reviewer.agent.md  tester.agent.md
.github/instructions/: cli-patterns.instructions.md  gis-patterns.instructions.md  python-standards.instructions.md  testing.instructions.md
.github/prompts/: add-command.prompt.md  edit-command.prompt.md  release.prompt.md  run-tests.prompt.md
src/indexmap_cli/: __init__.py  analyzer.py  cli.py  downloader.py  merger.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_downloader.py  test_merger.py
