[project]
name = "indexmap-cli"
version = "0.1.0"
description = "A CLI tool to analyze, download, and merge data from geographic index maps (quadrants)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.1.3",
    "python-dotenv>=1.2.2",
    "rasterio>=1.4.4",
    "requests>=2.34.2",
    "shapely>=2.1.2",
    "typer>=0.26.7",
]

[project.scripts]
indexmap = "indexmap_cli.cli:app"

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
addopts = "-v"
markers = [
    "integration: mark test as an integration test that connects to the real server (deselect with '-m not integration')",
]
